# ECS_Prakt

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  debug.bat  release.bat
src/: main.cpp
src/data/math/: rect_m.h  vec4.h
src/data/math/vectors/: vec2.h  vec3.h  vec_m.h
src/ecs/: ecs.h  ecs_core.cpp  ecs_io.cpp  ecs_io.h
src/ecs/components/: Component.h
src/ecs/core/: ECSCore.cpp  ECSCore.h
src/ecs/entities/: Entity.h  World.h
src/ecs/io/: ECSIO.cpp  ECSIO.h
src/ecs/systems/: SystemManager.cpp  SystemManager.h  system_manager.h
src/ecs/systems/system_combat/: SystemCombat.cpp  SystemCombat.h  system_combat.cpp  system_combat.h
src/ecs/systems/system_movement/: SystemMovement.cpp  SystemMovement.h  system_movement.cpp  system_movement.h
